# object-write

./: Cargo.toml
examples/: objcopy.rs
src/: coff.rs  elf.rs  lib.rs  macho.rs  util.rs
